<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shitty Twitter</string>
    <string name="hello">Hello: </string>
    <string name="signButton"></string>
    <string name="tweet">Tweet</string>
    <string name="feed">Feed</string>
    
    <string name="tweet_here">Type Your Tweet Here&#8230;</string>
    <string name="post">Post Tweet</string>
    
    <string name="viewFeed">View Feed</string>
    <string name="menu_settings">Settings</string>
    
    <string name="signIn">Sign In</string>

</resources>